--- a/supercar-webapp/src/main/resources/application.properties
+++ b/supercar-webapp/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=supercar-webapp
+
+# PostgreSQL configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/ayudantia_fingeso
+spring.datasource.username=postgres
+spring.datasource.password=1502
+spring.jpa.hibernate.ddl-auto=create-drop
